# RAG-UI-base

./: .replit  app.py  main.py  pyproject.toml  rag.py
attached_assets/: Pasted--1-Create-a-Replit-Project-Go-to-https-replit-com-Click-Create-Choose-Python-with-Flask--1745028017914.txt
static/: main.js  styles.css
templates/: index.html  layout.html
